Format numer to k

--- a/packages/mm-shared/src/track/VoteButton.scss
+++ b/packages/mm-shared/src/track/VoteButton.scss
@@ -1,4 +1,9 @@
 .VoteButton-root {
+  .MuiBadge-badge {
+    right: +10px;
+    top: +10px;
+    font-weight: 800;
+  }
   .current-user .MuiBadge-badge {
     color: white;
   }
