--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -13,6 +13,8 @@
 
     .TrackListItem-secondary-items {
       display: flex;
+      min-height: 1.2em;
+      padding-bottom: 0.2em;
     }
 
     .explicit-icon {
@@ -30,13 +32,6 @@
 
       .MuiSvgIcon-colorPrimary {
         color: $secondary-light;
-      }
-
-      .MuiBadge-badge {
-        right: +10px;
-        top: +10px;
-        font-size: 0.5em;
-        font-weight: 800;
       }
     }
   }
@@ -89,6 +84,10 @@
     color: white;
     opacity: 0.9;
   }
+}
+
+.TrackListItem-nested-track-icon {
+  margin-right: 0.4em;
 }
 
 .TrackListItem-host-actions {
