--- a/packages/mm-shared/src/track/TrackListItem.scss
+++ b/packages/mm-shared/src/track/TrackListItem.scss
@@ -36,21 +36,13 @@
     }
   }
 }
+
 .TrackListItem-track-image {
   position: relative;
-  width: 4.5em;
-  height: 4.5em;
-
-  .content-overlay {
-    background: rgba(0, 0, 0, 0.3);
-    color: rgba(248, 240, 240, 0.5);
-    position: absolute;
-    height: 99%;
-    width: 100%;
-    left: 0;
-    top: 0;
-  }
+  width: 64px;
+  height: 64px;
 }
+
 .TrackListItem-actions {
   display: flex;
 
