Added home button

--- a/packages/mm-shared/src/layout/topbar/TopBar.scss
+++ b/packages/mm-shared/src/layout/topbar/TopBar.scss
@@ -10,8 +10,20 @@
     color: #fff;
   }
 
-  .new-party {
+  .home {
     margin-right: 2.5em;
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+
+  .new-party {
+    margin-right: 0.1em;
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+
+  .new-party-lft {
+    margin-right: 2.2em;
     padding-top: 4px;
     padding-bottom: 4px;
   }
